# ic

./: .gitignore  .gitmodules  LICENSE  README.md  bibliography.bib  proposta.tex
codigo/: .gitignore  .pre-commit-config.yaml  load_llff.py  pyproject.toml  render_demo.ipynb  run_nerf.py  tiny_nerf.ipynb
codigo/nfs/: main.py  nfs.py  pyproject.toml
notas/: 3. metricas.md
notes/: 1. NeRF.md  1.1. MLP.md  MLP.md  NeRF.md
projeto/: extract_mesh.ipynb  run_nerf_helpers.py
proposta/: bibliography.bib  proposta.tex
proposta/diagram/: architecture.tex
proposta/text/: cronograma.tex  introducao.tex  metodologia.tex  objetivos.tex  resultados.tex  resumo.tex
text/: cronograma.tex  introducao.tex  metodologia.tex
