[project]
name = "IC"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nerfstudio>=0.3.4",
    "numpy>=1.24.4",
    "open3d>=0.19.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.workspace]
members = [
    "gan",
]
